--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
   "author": "JFQ_DEV <jfqdev@gmail.com>",
   "private": true,
   "scripts": {
-    "test": "echo \"No test specified\" && exit 0"
+    "build": "quasar build",
+    "start": "node server.js",
+    "heroku-postbuild": "yarn && yarn build"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^0.21.1",
+    "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.5",
+    "express": "^4.18.0",
     "quasar": "^1.0.0",
+    "serve-static": "^1.15.0",
     "vue-i18n": "^8.0.0"
   },
   "devDependencies": {
