--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "express": "^4.18.0",
     "quasar": "^1.0.0",
     "serve-static": "^1.15.0",
-    "vue-i18n": "^8.0.0"
-  },
-  "devDependencies": {
+    "vue-i18n": "^8.0.0",
     "@quasar/app": "^2.0.0"
   },
   "browserslist": [
