--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "JFQ_DEV <jfqdev@gmail.com>",
   "private": true,
   "scripts": {
+    "dev": "quasar dev",
     "build": "quasar build",
     "start": "node server.js"
   },
